--- a/jobs_finite/package.json
+++ b/jobs_finite/package.json
@@ -14,6 +14,7 @@
     "compass-mixins": "^0.12.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-fast-marquee": "^1.3.1",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
