--- a/jobs_finite/package.json
+++ b/jobs_finite/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.0",
     "compass": "^0.1.1",
     "compass-mixins": "^0.12.10",
     "react": "^17.0.2",
