--- a/jobs_finite/package.json
+++ b/jobs_finite/package.json
@@ -17,9 +17,10 @@
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.1",
     "react-icons": "^4.3.1",
-    "react-router": "^6.2.1",
+    "react-router": "^6.2.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
     "react-swipeable-views": "^0.14.0",
     "sass": "^1.49.7",
     "web-vitals": "^2.1.4"
