--- a/jobs_finite/package.json
+++ b/jobs_finite/package.json
@@ -25,6 +25,7 @@
     "react-select": "^5.2.2",
     "react-swipeable-views": "^0.14.0",
     "sass": "^1.49.7",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
