--- a/jobs_finite/package.json
+++ b/jobs_finite/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.1",
+    "react-favicon": "^1.0.0",
     "react-icons": "^4.3.1",
     "react-modal": "^3.15.1",
     "react-router": "^6.2.2",
