--- a/jobs_finite/package.json
+++ b/jobs_finite/package.json
@@ -19,6 +19,7 @@
     "react-fast-marquee": "^1.3.1",
     "react-favicon": "^1.0.0",
     "react-icons": "^4.3.1",
+    "react-js-loader": "^0.1.0",
     "react-modal": "^3.15.1",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.1",
